--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 flask
-flask_bcrypt
-flask_login
-flask_wtf
-sqlalchemy
-pymysql
+flask-bcrypt
+flask-login
 flask-mail
+flask-wtf
+SQLAlchemy
+pymysql
 google-api-python-client
-oauth2client 
-
+oauth2client
